data/usersCode/hjsgj/question2/error.txt
/home/gauravghati/clash2/data/usersCode/hjsgj/question2/code2-4.cpp: In function ‘int main()’:
/home/gauravghati/clash2/data/usersCode/hjsgj/question2/code2-4.cpp:4:9: error: too few arguments to function ‘int printf(const char*, ...)’
  printf()
         ^
In file included from /usr/include/c++/7/cstdio:42:0,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:46,
                 from /home/gauravghati/clash2/data/usersCode/hjsgj/question2/code2-4.cpp:1:
/usr/include/stdio.h:318:12: note: declared here
 extern int printf (const char *__restrict __format, ...);
            ^~~~~~
